secp256k1-zkp-sys/depend/secp256k1-zkp/include/secp256k1_rangeproof.h

/** Opaque data structure that stores a Pedersen commitment
 *
 *  The exact representation of data inside is implementation defined and not
 *  guaranteed to be portable between different platforms or versions. It is
 *  however guaranteed to be 64 bytes in size, and can be safely copied/moved.
 *  If you need to convert to a format suitable for storage, transmission, or
 *  comparison, use secp256k1_zkp_pedersen_commitment_serialize and
 *  secp256k1_zkp_pedersen_commitment_parse.
 */
typedef struct {
    unsigned char data[64];
} secp256k1_zkp_pedersen_commitment;
/**
 * Static constant generator 'h' maintained for historical reasons.
 */
SECP256K1_API extern const secp256k1_zkp_generator *secp256k1_zkp_generator_h;
/** Parse a 33-byte commitment into a commitment object.
 *
 *  Returns: 1 if input contains a valid commitment.
 *  Args: ctx:      a secp256k1 context object.
 *  Out:  commit:   pointer to the output commitment object
 *  In:   input:    pointer to a 33-byte serialized commitment key
 */
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int secp256k1_zkp_pedersen_commitment_parse(
    const secp256k1_zkp_context* ctx,
    secp256k1_zkp_pedersen_commitment* commit,
    const unsigned char *input
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
/** Serialize a commitment object into a serialized byte sequence.
 *
 *  Returns: 1 always.
 *  Args:   ctx:        a secp256k1 context object.
 *  Out:    output:     a pointer to a 33-byte byte array
 *  In:     commit:     a pointer to a secp256k1_zkp_pedersen_commitment containing an
 *                      initialized commitment
 */
SECP256K1_API int secp256k1_zkp_pedersen_commitment_serialize(
    const secp256k1_zkp_context* ctx,
    unsigned char *output,
    const secp256k1_zkp_pedersen_commitment* commit
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
/** Initialize a context for usage with Pedersen commitments. */
void secp256k1_zkp_pedersen_context_initialize(secp256k1_zkp_context* ctx);
/** Generate a pedersen commitment.
 *  Returns 1: Commitment successfully created.
 *          0: Error. The blinding factor is larger than the group order
 *             (probability for random 32 byte number < 2^-127) or results in the
 *             point at infinity. Retry with a different factor.
 *  In:     ctx:        pointer to a context object, initialized for signing and Pedersen commitment (cannot be NULL)
 *          blind:      pointer to a 32-byte blinding factor (cannot be NULL)
 *          value:      unsigned 64-bit integer value to commit to.
 *          gen:        additional generator 'h'
 *  Out:    commit:     pointer to the commitment (cannot be NULL)
 *
 *  Blinding factors can be generated and verified in the same way as secp256k1 private keys for ECDSA.
 */
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int secp256k1_zkp_pedersen_commit(
  const secp256k1_zkp_context* ctx,
  secp256k1_zkp_pedersen_commitment *commit,
  const unsigned char *blind,
  uint64_t value,
  const secp256k1_zkp_generator *gen
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(5);