secp256k1-zkp-sys/secp_bindings.rs

extern "C" {
    #[doc = " Extracts a secret adaptor from a MuSig, given all parties' partial"]
    #[doc = "  signatures. This function will not fail unless given grossly invalid data; if it"]
    #[doc = "  is merely given signatures that do not verify, the returned value will be"]
    #[doc = "  nonsense. It is therefore important that all data be verified at earlier steps of"]
    #[doc = "  any protocol that uses this function."]
    #[doc = ""]
    #[doc = "  Returns: 1: signatures contained valid data such that an adaptor could be extracted"]
    #[doc = "           0: otherwise"]
    #[doc = "  Args:         ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "  Out:sec_adaptor32: 32-byte secret adaptor (cannot be NULL)"]
    #[doc = "  In:         sig64: complete 2-of-2 signature (cannot be NULL)"]
    #[doc = "       partial_sigs: array of partial signatures (cannot be NULL)"]
    #[doc = "     n_partial_sigs: number of elements in partial_sigs array"]
    #[doc = "   nonce_is_negated: the `nonce_is_negated` output of `musig_session_combine_nonces`"]
    pub fn secp256k1_zkp_musig_extract_secret_adaptor(
        ctx: *const secp256k1_zkp_context,
        sec_adaptor32: *mut ::std::os::raw::c_uchar,
        sig64: *const ::std::os::raw::c_uchar,
        partial_sigs: *const secp256k1_zkp_musig_partial_signature,
        n_partial_sigs: size_t,
        nonce_is_negated: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Determine the memory size of a secp256k1 context object to be created in"]
    #[doc = "  caller-provided memory."]
    #[doc = ""]
    #[doc = "  The purpose of this function is to determine how much memory must be provided"]
    #[doc = "  to secp256k1_zkp_context_preallocated_create."]
    #[doc = ""]
    #[doc = "  Returns: the required size of the caller-provided memory block"]
    #[doc = "  In:      flags:    which parts of the context to initialize."]
    pub fn secp256k1_zkp_context_preallocated_size(flags: ::std::os::raw::c_uint) -> size_t;
}
extern "C" {
    #[doc = " Create a secp256k1 context object in caller-provided memory."]
    #[doc = ""]
    #[doc = "  The caller must provide a pointer to a rewritable contiguous block of memory"]
    #[doc = "  of size at least secp256k1_zkp_context_preallocated_size(flags) bytes, suitably"]
    #[doc = "  aligned to hold an object of any type."]
    #[doc = ""]
    #[doc = "  The block of memory is exclusively owned by the created context object during"]
    #[doc = "  the lifetime of this context object, which begins with the call to this"]
    #[doc = "  function and ends when a call to secp256k1_zkp_context_preallocated_destroy"]
    #[doc = "  (which destroys the context object again) returns. During the lifetime of the"]
    #[doc = "  context object, the caller is obligated not to access this block of memory,"]
    #[doc = "  i.e., the caller may not read or write the memory, e.g., by copying the memory"]
    #[doc = "  contents to a different location or trying to create a second context object"]
    #[doc = "  in the memory. In simpler words, the prealloc pointer (or any pointer derived"]
    #[doc = "  from it) should not be used during the lifetime of the context object."]
    #[doc = ""]
    #[doc = "  Returns: a newly created context object."]
    #[doc = "  In:      prealloc: a pointer to a rewritable contiguous block of memory of"]
    #[doc = "                     size at least secp256k1_zkp_context_preallocated_size(flags)"]
    #[doc = "                     bytes, as detailed above (cannot be NULL)"]
    #[doc = "           flags:    which parts of the context to initialize."]
    #[doc = ""]
    #[doc = "  See also secp256k1_zkp_context_randomize (in secp256k1.h)"]
    #[doc = "  and secp256k1_zkp_context_preallocated_destroy."]
    pub fn secp256k1_zkp_context_preallocated_create(
        prealloc: *mut ::std::os::raw::c_void,
        flags: ::std::os::raw::c_uint,
    ) -> *mut secp256k1_zkp_context;
}
extern "C" {
    #[doc = " Determine the memory size of a secp256k1 context object to be copied into"]
    #[doc = "  caller-provided memory."]
    #[doc = ""]
    #[doc = "  Returns: the required size of the caller-provided memory block."]
    #[doc = "  In:      ctx: an existing context to copy (cannot be NULL)"]
    pub fn secp256k1_zkp_context_preallocated_clone_size(
        ctx: *const secp256k1_zkp_context,
    ) -> size_t;
}
extern "C" {
    #[doc = " Copy a secp256k1 context object into caller-provided memory."]
    #[doc = ""]
    #[doc = "  The caller must provide a pointer to a rewritable contiguous block of memory"]
    #[doc = "  of size at least secp256k1_zkp_context_preallocated_size(flags) bytes, suitably"]
    #[doc = "  aligned to hold an object of any type."]
    #[doc = ""]
    #[doc = "  The block of memory is exclusively owned by the created context object during"]
    #[doc = "  the lifetime of this context object, see the description of"]
    #[doc = "  secp256k1_zkp_context_preallocated_create for details."]
    #[doc = ""]
    #[doc = "  Returns: a newly created context object."]
    #[doc = "  Args:    ctx:      an existing context to copy (cannot be NULL)"]
    #[doc = "  In:      prealloc: a pointer to a rewritable contiguous block of memory of"]
    #[doc = "                     size at least secp256k1_zkp_context_preallocated_size(flags)"]
    #[doc = "                     bytes, as detailed above (cannot be NULL)"]
    pub fn secp256k1_zkp_context_preallocated_clone(
        ctx: *const secp256k1_zkp_context,
        prealloc: *mut ::std::os::raw::c_void,
    ) -> *mut secp256k1_zkp_context;
}
extern "C" {
    #[doc = " Destroy a secp256k1 context object that has been created in"]
    #[doc = "  caller-provided memory."]
    #[doc = ""]
    #[doc = "  The context pointer may not be used afterwards."]
    #[doc = ""]
    #[doc = "  The context to destroy must have been created using"]
    #[doc = "  secp256k1_zkp_context_preallocated_create or secp256k1_zkp_context_preallocated_clone."]
    #[doc = "  If the context has instead been created using secp256k1_zkp_context_create or"]
    #[doc = "  secp256k1_zkp_context_clone, the behaviour is undefined. In that case,"]
    #[doc = "  secp256k1_zkp_context_destroy must be used instead."]
    #[doc = ""]
    #[doc = "  If required, it is the responsibility of the caller to deallocate the block"]
    #[doc = "  of memory properly after this function returns, e.g., by calling free on the"]
    #[doc = "  preallocated pointer given to secp256k1_zkp_context_preallocated_create or"]
    #[doc = "  secp256k1_zkp_context_preallocated_clone."]
    #[doc = ""]
    #[doc = "  Args:   ctx: an existing context to destroy, constructed using"]
    #[doc = "               secp256k1_zkp_context_preallocated_create or"]
    #[doc = "               secp256k1_zkp_context_preallocated_clone (cannot be NULL)"]
    pub fn secp256k1_zkp_context_preallocated_destroy(ctx: *mut secp256k1_zkp_context);
}
#[doc = " Opaque data structure that stores a Pedersen commitment"]
#[doc = ""]
#[doc = "  The exact representation of data inside is implementation defined and not"]
#[doc = "  guaranteed to be portable between different platforms or versions. It is"]
#[doc = "  however guaranteed to be 64 bytes in size, and can be safely copied/moved."]
#[doc = "  If you need to convert to a format suitable for storage, transmission, or"]
#[doc = "  comparison, use secp256k1_zkp_pedersen_commitment_serialize and"]
#[doc = "  secp256k1_zkp_pedersen_commitment_parse."]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct secp256k1_zkp_pedersen_commitment {
    pub data: [::std::os::raw::c_uchar; 64usize],
}
#[test]
fn bindgen_test_layout_secp256k1_zkp_pedersen_commitment() {
    assert_eq!(
        ::std::mem::size_of::<secp256k1_zkp_pedersen_commitment>(),
        64usize,
        concat!("Size of: ", stringify!(secp256k1_zkp_pedersen_commitment))
    );
    assert_eq!(
        ::std::mem::align_of::<secp256k1_zkp_pedersen_commitment>(),
        1usize,
        concat!(
            "Alignment of ",
            stringify!(secp256k1_zkp_pedersen_commitment)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<secp256k1_zkp_pedersen_commitment>())).data as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(secp256k1_zkp_pedersen_commitment),
            "::",
            stringify!(data)
        )
    );
}
extern "C" {
    pub static mut secp256k1_zkp_generator_h: *const secp256k1_zkp_generator;
}
extern "C" {
    #[doc = " Parse a 33-byte commitment into a commitment object."]
    #[doc = ""]
    #[doc = "  Returns: 1 if input contains a valid commitment."]
    #[doc = "  Args: ctx:      a secp256k1 context object."]
    #[doc = "  Out:  commit:   pointer to the output commitment object"]
    #[doc = "  In:   input:    pointer to a 33-byte serialized commitment key"]
    pub fn secp256k1_zkp_pedersen_commitment_parse(
        ctx: *const secp256k1_zkp_context,
        commit: *mut secp256k1_zkp_pedersen_commitment,
        input: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Serialize a commitment object into a serialized byte sequence."]
    #[doc = ""]
    #[doc = "  Returns: 1 always."]
    #[doc = "  Args:   ctx:        a secp256k1 context object."]
    #[doc = "  Out:    output:     a pointer to a 33-byte byte array"]
    #[doc = "  In:     commit:     a pointer to a secp256k1_zkp_pedersen_commitment containing an"]
    #[doc = "                      initialized commitment"]
    pub fn secp256k1_zkp_pedersen_commitment_serialize(
        ctx: *const secp256k1_zkp_context,
        output: *mut ::std::os::raw::c_uchar,
        commit: *const secp256k1_zkp_pedersen_commitment,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Initialize a context for usage with Pedersen commitments."]
    pub fn secp256k1_zkp_pedersen_context_initialize(ctx: *mut secp256k1_zkp_context);
}
extern "C" {
    #[doc = " Generate a pedersen commitment."]
    #[doc = "  Returns 1: Commitment successfully created."]
    #[doc = "          0: Error. The blinding factor is larger than the group order"]
    #[doc = "             (probability for random 32 byte number < 2^-127) or results in the"]
    #[doc = "             point at infinity. Retry with a different factor."]
    #[doc = "  In:     ctx:        pointer to a context object, initialized for signing and Pedersen commitment (cannot be NULL)"]
    #[doc = "          blind:      pointer to a 32-byte blinding factor (cannot be NULL)"]
    #[doc = "          value:      unsigned 64-bit integer value to commit to."]
    #[doc = "          gen:        additional generator 'h'"]
    #[doc = "  Out:    commit:     pointer to the commitment (cannot be NULL)"]
    #[doc = ""]
    #[doc = "  Blinding factors can be generated and verified in the same way as secp256k1 private keys for ECDSA."]
    pub fn secp256k1_zkp_pedersen_commit(
        ctx: *const secp256k1_zkp_context,
        commit: *mut secp256k1_zkp_pedersen_commitment,
        blind: *const ::std::os::raw::c_uchar,
        value: u64,
        gen: *const secp256k1_zkp_generator,
    ) -> ::std::os::raw::c_int;
}
